k8s/cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: react-express-api
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: LoadBalancer
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: react-express-api
