k8s/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-express-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "true" # Optional: Redirect HTTP to HTTPS
spec:
  tls:
  - hosts:
    - localhost
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
